Remove entity id field construct
